# FreeBurn

./: .gitignore  .gitmodules  CMakeLists.txt  FreeBurn.sln  Makefile
FreeBurn/: CMakeLists.txt  FreeBurn.vcxproj  FreeBurn.vcxproj.filters
FreeBurn/Core/SharedClasses/: BoAILaneStruct.h  BoCameraMovie.cpp  BoDataLists.cpp  BoDataLists.h  BoProgressionDataStruct.h  BoSharedConstants.h
Main/: FreeBurn.vcxproj  FreeBurn.vcxproj.filters
Main/Code/GameSource/: BoMainPS2.cpp
Main/Code/SharedClasses/: BoProgressionDataStruct.h
Projects/: FreeBurn.vcxproj  FreeBurn.vcxproj.filters
Shared/Containers/: GtArray.cpp  GtArray.h
Shared/Core/: GtID.cpp  GtID.h
Shared/Development/CommsTool/: GtCommsDatabase.cpp  GtCommsDatabase.h
Shared/Geometric/PC/: GtSpherePC.h
Shared/Graphical/Common/: GtColour.h  GtTextureDictionary.h
Shared/Graphical/PC/: Gt2dRendererPC.cpp  (+1 more)
Shared/Numeric/: GtRandom.h
Source/: BoMainPC.cpp  FreeBurn.sln
Source/Camera/: BoFlags32.cpp  BoPlayerCameraManager.cpp  BoPlayerCameraManager.h
Source/Core/: FreeBurn.h
Source/HUD/: BoHUDBoostBar.cpp  BoHUDBoostBar.h  BoHUDComponent.cpp  BoHUDComponent.h  BoHUDText2dObject.cpp  BoHUDText2dObject.h
Source/Menu/: BoFlashMovieManager.cpp  BoMenuChoices.cpp  BoMenuChoices.h
Source/Physics/: BoActiveBody.h  BoBodyPartPhysics.h  BoCameraPhysics.h  BoCheckedTrafficPhysics.h  BoCollidingBody.cpp  BoCollidingBody.h  BoDrivableVehiclePhysics.h  BoPhysicsManager.cpp  BoPhysicsManager.h  BoPropPhysics.h  BoTrafficPhysics.h  BoVehiclePhysics.cpp  BoVehiclePhysics.h
Source/Projects/: FreeBurn.vcxproj
(+524 files in other folders)
